public/css/home-style.css
/* Header section */

.header-container {
    padding: 6rem 0;
    /*width: 100%;*/
}

.header-container .header-title {
    font-size: 3.5rem;
    font-weight: bold;
    line-height: 150%;
    color: var(--textColor);
}

.header-container .header-title span {
    color: var(--primary);
}

.header-container .header-subtitle {
    font-size: 1.1rem;
    font-weight: 400;
    line-height: 150%;
    color: var(--textColor);
}

.header-container .header-search {
    display: flex;
    margin-top: 2.5rem;
}

.header-container .header-search .search-input {
    width: 100%;
    height: 60px;
    font-size: 16px;
    letter-spacing: .5px;
    border: 2px solid var(--border);
    color: var(--labelColor);
    background: transparent url('../img/interface-icons/fi-rr-search.png') no-repeat 15px;
    padding: 0 10px 0 50px;
    border-radius: 8px 0 0 8px;
    transition: .7s;
}

.header-container .header-search .search-input:active {
    outline: none;
    border: 2px solid var(--border);
}

.header-container .header-search .search-input:hover {
    border-color: var(--primary);
}

.header-container .header-search .search-input:focus {
    outline: none;
    border-color: var(--primary);
}

.header-container .header-search .search-input::placeholder {
    font-size: 16px;
    font-weight: 400;
    letter-spacing: .5px;
    color: var(--labelColor);
}

.header-container .header-search .search-btn {
    width: 160px;
    border: none;
    color: var(--white);
    background: var(--primary);
    border-radius: 0 8px 8px 0;
    transition: .7s;
}

.header-container .header-search .search-btn:hover {
    background-color: var(--secondary);
}

/* Main section */

main {
    background: var(--backgroud);
}

main .container {
    padding-top: 3rem;
    padding-bottom: 3rem;
    color: var(--textColor);
}

main .application-content {
    display: grid;
    grid-template-columns: 0.3fr 1fr;
    grid-column-gap: 2rem;
}

main .application-content .application-filters {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    background: var(--white);
    width: 300px;
    border-radius: 8px;
    border: 2px solid var(--sectionBorder);
}

main .application-content .application-filters .application-filters-title {
    font-size: 1.4rem;
    font-weight: bold;
    margin: 0;
}

main .application-content .application-filters .filter-type {
    margin-top: 1rem;
}

main .application-content .application-filters .filter-title {
    font-size: 1.1rem;
    font-weight: 500;
    margin-bottom: 0.6rem;
}

main .application-content .application-filters .filter-choose {
    display: flex;
    flex-direction: column;
}

main .application-content .application-filters .filter-choose label {
    padding-left: .5rem;
    color: var(--textColorSecond);
}

.application-container .application-title {
    font-size: 2rem;
    font-weight: bold;
    margin: 0;
}

.application-container .application-list{
    display: flex;
    flex-direction: column;
}

.application-container .application-list .application-card{
    display: flex;
    flex-direction: row;
    margin-top: 1rem;
    padding: 1.5rem;
    background: var(--white);
    border-radius: 8px;
    border: 2px solid var(--sectionBorder);
}

.application-card .company-icon img{
    width: 72px;
    height: 72px;
    border-radius: 8px;
    object-fit: contain;
}

.application-card .company-info{
    margin-left: 1.5rem;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.application-card .company-info .company-name-place{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.application-card .company-info .company-name{
    font-size: 1.1rem;
    font-weight: 400;
    line-height: 150%;
}

.company-place{
    font-size: .9rem;
    font-weight: 400;
    line-height: 150%;
    color: var(--textColorSecond);
}

.application-card .company-info .application-name{
    margin-top: .25rem;
    font-size: 1.5rem;
    font-weight: 500;
    letter-spacing: .5px;
    line-height: 150%;
    color: var(--primary);
}

.application-card .company-info .application-price{
    font-size: 1.25rem;
    font-weight: 500;
    line-height: 150%;
    color: var(--textColorSecond);
}

.application-card .company-info .application-langs-schedules{
    display: flex;
    justify-content: space-between;
}

.application-card .company-info .application-langs,
.application-card .company-info .application-schedules{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-top: .5rem;
}

.application-card .company-info .application-langs .application-lang,
.application-card .company-info .application-schedules .application-schedule{
    padding: .25rem 1rem;
    border: 1px solid var(--border);
    border-radius: 8px;
    margin-right: 1rem;
    font-size: .9rem;
    font-weight: 400;
    line-height: 150%;
    color: var(--textColorSecond);
}

.application-card .company-info .application-schedules .application-schedule{
    margin-right: 0;
}

.application-card .company-info .application-description{
    margin-top: .75rem;
    font-size: .9rem;
    font-weight: 400;
    line-height: 150%;
    color: var(--textColorSecond);
}

.show-more{
    display: none;
    margin-top: .5rem;
    position: relative;
    /*display: flex;*/
    cursor: pointer;
}
.show-more .show-more-text{
    color: var(--primary);
    transition: .7s;
}

.filter-more{
    display: block;
}

.filter-more.active{
    display: block;
}

.show-more.active .select-arrow{
    transform: rotate(180deg);
}

.select-arrow{
    position: absolute;
    top: 8px;
    left: 125px;
    pointer-events: none;
    border-style: solid;
    border-width: 8px 5px 0px 5px;
    border-color: var(--primary) transparent transparent transparent;
    transition: .7s;
}

.show-more:hover .show-more-text,
.show-more:focus .show-more-text{
    color: var(--secondary);
}

.show-more:hover .select-arrow,
.show-more:focus .select-arrow {
    border-top-color: var(--secondary);
}

.show-more:disabled .select-arrow {
    border-top-color: #cccccc;
}

@media (max-width: 992px) {
    .header-container .header-title{
        font-size: 2.5rem;
    }
    .header-container .header-subtitle{
        font-size: 1rem;
    }
    main .application-content{
        grid-template-columns: repeat(1, 1fr);
    }
    main .application-content .application-filters{
        width: 100%;
    }
    .application-container .application-title{
        margin-top: 2rem;
    }
    .application-container .application-list .application-card{
        padding: 1rem;
    }
    .filter-more{
        display: none;
    }
    .show-more{
        display: block;
    }
}

@media (max-width: 768px){
    .header-container .header-title{
        line-height: 110%;
    }
}

@media (max-width: 440px){
    .header-container .header-title-container{
        text-align: center;
    }
    .header-container .header-title{
        font-size: 2rem;
    }
    .application-card .company-info .company-name{
        font-size: 0.75rem;
    }
    .company-place{
        display: none;
    }
}

